# forgeit

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/forgeit/: config.py
src/forgeit/application/: __init__.py
src/forgeit/cli/: __init__.py  menu.py  variables.py
src/forgeit/domain/: content.py  engine.py  processor.py  template.py
src/forgeit/impl/: fs_content_reader.py  jinja_engine.py  json_template.py  local_template_repository.py
src/forgeit/utils/: files.py  importer.py
templates/: forge.json
templates/flask/api/{{ project_slug }}/: README.md
templates/flask/api/{{ project_slug }}/src/: app.py  settings.py
templates/flask/api/{{ project_slug }}/src/static/: script.js
templates/flask/api/{{ project_slug }}/src/templates/: index.html
templates/flask/module/{{ project_slug }}/src/{{  module_name }}/: controller.py  model.py  view.py
templates/package/{{ project_name }}/src/{{ project_name }}/: pyproject.toml
templates/package/{{ project_slug }}/src/{{ project_slug }}/: pyproject.toml
