[project]
name = "{{ project_name }}"
version = "{{ version }}"
authors = [
  { name="{{ author }}", email="{{ author_email }}" },
]
description = "{{ description }}"
readme = "{{ readme }}"
requires-python = ">={{ python_version }}"
classifiers = [
    "Add the classifiers here"
]
keywords = ["python"]
dependencies = [
"<dependency1>",
]

[project.urls]
Homepage = "{{ homepage }}"

[project.scripts]
forgeit = "{{ project_script }}"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"