[project]
name = "{{ project_name }}"
version = "{{ version }}"
authors = [
  { name="{{ author }}", email="{{ author_email }}" },
]
description = "{{ description }}"
readme = "{{ readme }}"
requires-python = ">={{ python_version }}"
classifiers = [
    {% for cl in classifiers %}"{{ cl }}"{% if loop.index < classifiers|length %},{% endif %}{% endfor %}
]
keywords = [
  {% for kw in keywords %}"{{ kw }}"{% if loop.index < keywords|length %},{% endif %}{% endfor %}
]
dependencies = [
    {% for dep in dependencies %}"{{ dep }}"{% if loop.index < dependencies|length %},{% endif %}{% endfor %}
]

[project.urls]
Homepage = "{{ homepage }}"

[project.scripts]
{{ script_name }} = "{{project_slug}}.{{ script_path }}"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"